# lesc

./: README.md  boiko.py  docker-compose.yaml  pyproject.toml
.dev/db/docker-entrypoint-initdb.d/: init-calendar.sh
alembic/: env.py
alembic/versions/: 81219453a393_init.py
app/: __init__.py  container.py  main.py  run.py  settings.py  utils.py
app/adapters/: unit_of_work.py
app/adapters/orm/: __init__.py  instrumentation.py  tables.py
app/adapters/repo/: __init__.py  account_repository.py
app/domain/: __init__.py
app/domain/commands/: __init__.py  auth.py  command.py
app/domain/events/: __init__.py
app/domain/models/: __init__.py  account.py  entity.py
app/rest_api/: __init__.py
app/rest_api/auth/: __init__.py  endpoints.py  middleware.py  models.py
app/service_layer/: message_bus.py  repositories.py  unit_of_work.py
app/service_layer/handlers/: __init__.py  mapping.py
app/service_layer/handlers/command_handlers/: __init__.py  auth.py
app/telemetry/: __init__.py  metrics.py  rest_api.py  traces.py
