[project]
name = "LESC"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "vlad boiko", email = "acc.v.boiko@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.3",
    "dependency-injector>=4.42.0",
    "pytest>=8.3.3",
    "alembic>=1.13.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
